--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "infopubliccard",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://zaqurbanov.github.io/zaqurbanov/qr-info/:id",
+  "homepage": "https://zaqurbanov.github.io/zaqurbanov/qr-info/",
   "type": "module",
   "scripts": {
     "dev": "vite",
